tests/cases/parser/literals/non_hex_unicode_char.stderr
error: invalid character escape sequence. expected `}` after a escape sequence
 --> $DIR/non_hex_unicode_char.hash:3:10
2 |   
3 |   k := '\u{g00000}';
  |            ^ here
